manifests/prod/kong/Service-kong-controller-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kong
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: controller
    app.kubernetes.io/version: "3.8"
    helm.sh/chart: controller-2.46.0
  name: kong-controller-metrics
  namespace: kong
spec:
  ports:
    - name: cmetrics
      port: 10255
      protocol: TCP
      targetPort: cmetrics
    - name: status
      port: 10254
      protocol: TCP
      targetPort: cstatus
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kong
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: controller
    app.kubernetes.io/version: "3.8"
    helm.sh/chart: controller-2.46.0
