manifests/prod/kong/Service-kong-gateway-admin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kong
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: gateway
    app.kubernetes.io/version: "3.8"
    helm.sh/chart: gateway-2.46.0
  name: kong-gateway-admin
  namespace: kong
spec:
  clusterIP: None
  ports:
    - name: kong-admin-tls
      port: 8444
      protocol: TCP
      targetPort: 8444
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kong
    app.kubernetes.io/name: gateway
  type: ClusterIP
