manifests/prod/kong/Service-kong-gateway-manager.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kong
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: gateway
    app.kubernetes.io/version: "3.8"
    helm.sh/chart: gateway-2.46.0
  name: kong-gateway-manager
  namespace: kong
spec:
  ports:
    - name: kong-manager
      port: 8002
      protocol: TCP
      targetPort: 8002
    - name: kong-manager-tls
      port: 8445
      protocol: TCP
      targetPort: 8445
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kong
    app.kubernetes.io/name: gateway
  type: NodePort
