manifests/prod/kong/Service-kong-gateway-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kong
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: gateway
    app.kubernetes.io/version: "3.8"
    enable-metrics: "true"
    helm.sh/chart: gateway-2.46.0
  name: kong-gateway-proxy
  namespace: kong
spec:
  loadBalancerClass: tailscale
  ports:
    - name: kong-proxy
      port: 80
      protocol: TCP
      targetPort: 8000
    - name: kong-proxy-tls
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kong
    app.kubernetes.io/name: gateway
  type: LoadBalancer
