manifests/prod/kong/ValidatingWebhookConfiguration-kong-controller-validations.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: kong
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: controller
    app.kubernetes.io/version: "3.8"
    helm.sh/chart: controller-2.46.0
  name: kong-controller-validations
  namespace: kong
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lSQUpaNDhKd2dNZFg5dEMvSXc0OHpqdHN3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUmEyOXVaeTFoWkcxcGMzTnBiMjR0WTJFd0hoY05NalV3TWpBeU1qRXdNVFV6V2hjTgpNelV3TVRNeE1qRXdNVFV6V2pBY01Sb3dHQVlEVlFRREV4RnJiMjVuTFdGa2JXbHpjMmx2YmkxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFKeWtHZnBkcEZwTncxdUs0OVpzVm82a2RXWkkKUTdPNzNyTGRRQ1F0U1ZBZTZ5TWdld3FVejVRaExRUlEzbUtqQU1WVENnYit1dnl1U0w4VHY0VWlsdkZYbWZTZwpnN0lSTlcxOGNU [...]
      service:
        name: kong-controller-validation-webhook
        namespace: kong
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: secrets.credentials.validation.ingress-controller.konghq.com
    objectSelector:
      matchExpressions:
        - key: konghq.com/credential
          operator: Exists
        - key: konghq.com/credential
          operator: NotIn
          values:
            - konnect
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - secrets
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lSQUpaNDhKd2dNZFg5dEMvSXc0OHpqdHN3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUmEyOXVaeTFoWkcxcGMzTnBiMjR0WTJFd0hoY05NalV3TWpBeU1qRXdNVFV6V2hjTgpNelV3TVRNeE1qRXdNVFV6V2pBY01Sb3dHQVlEVlFRREV4RnJiMjVuTFdGa2JXbHpjMmx2YmkxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFKeWtHZnBkcEZwTncxdUs0OVpzVm82a2RXWkkKUTdPNzNyTGRRQ1F0U1ZBZTZ5TWdld3FVejVRaExRUlEzbUtqQU1WVENnYit1dnl1U0w4VHY0VWlsdkZYbWZTZwpnN0lSTlcxOGNU [...]
      service:
        name: kong-controller-validation-webhook
        namespace: kong
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: secrets.plugins.validation.ingress-controller.konghq.com
    objectSelector:
      matchExpressions:
        - key: owner
          operator: NotIn
          values:
            - helm
        - key: konghq.com/credential
          operator: NotIn
          values:
            - konnect
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - secrets
    sideEffects: None
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lSQUpaNDhKd2dNZFg5dEMvSXc0OHpqdHN3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUmEyOXVaeTFoWkcxcGMzTnBiMjR0WTJFd0hoY05NalV3TWpBeU1qRXdNVFV6V2hjTgpNelV3TVRNeE1qRXdNVFV6V2pBY01Sb3dHQVlEVlFRREV4RnJiMjVuTFdGa2JXbHpjMmx2YmkxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFKeWtHZnBkcEZwTncxdUs0OVpzVm82a2RXWkkKUTdPNzNyTGRRQ1F0U1ZBZTZ5TWdld3FVejVRaExRUlEzbUtqQU1WVENnYit1dnl1U0w4VHY0VWlsdkZYbWZTZwpnN0lSTlcxOGNU [...]
      service:
        name: kong-controller-validation-webhook
        namespace: kong
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: validations.kong.konghq.com
    objectSelector:
      matchExpressions:
        - key: owner
          operator: NotIn
          values:
            - helm
    rules:
      - apiGroups:
          - configuration.konghq.com
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - kongconsumers
          - kongplugins
          - kongclusterplugins
          - kongingresses
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - services
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
      - apiGroups:
          - gateway.networking.k8s.io
        apiVersions:
          - v1alpha2
          - v1beta1
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - gateways
          - httproutes
    sideEffects: None
